# Devforge

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEPLOY.md  Dockerfile.local  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/common/: __init__.py  _http.py  aws_backend.py  interface.py  local_backend.py
backend/control_plane/: Dockerfile  github_app.py  main.py
backend/cost/: dashboard.py  tracker.py
backend/database/: run_migrations.py
backend/database/migrations/: 001_schema.sql  002_job_events.sql  003_approval_tokens_optional_job.sql  004_tenants_clerk_identity.sql
backend/ingest/: chunker.py  cleanup_s3vectors.py  index_tenant_repo.py  ingest_s3vectors.py  search_s3vectors.py  test_ingest_s3vectors.py  test_search_s3vectors.py
backend/mcp/fs_mcp/: server.py
backend/mcp/sandbox_mcp/: server.py
backend/safety/: __init__.py  approval.py  denylist.py  injection_scrub.py  scope.py  secret_redact.py
backend/worker/: Dockerfile  backend_engineer.py  crew.py  frontend_engineer.py  lead.py  migration_engineer.py  models.yaml  orchestrator.py  qa_engineer.py  schemas.py  worktree.py
frontend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile.local  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/components/: Brand.tsx  EventCard.tsx  Layout.tsx  NewTicketModal.tsx  PendingApprovalCard.tsx  StatusBadge.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Spinner.tsx
frontend/lib/: api.test.ts  api.ts  sse.ts
frontend/pages/: _app.tsx  approvals.tsx  dashboard.tsx  index.tsx
frontend/pages/jobs/: [id].tsx
frontend/styles/: globals.css
scripts/: aws_env.sh  deploy_aws.sh  index_repo.py  install_github_app.py  link_tenant_clerk_identity.py  local_dev.sh  mint_approval.py  populate_demo_repo.py  redteam.py  redteam_live.py  run_ticket.py  search_codebase.py  seed_demo_tenant.py  supersede_stale_approvals.py  test_qa_gate_direct.py  verify_mcps.py
terraform/1_permissions/: cmk.plan  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/2_sagemaker/: main.tf
terraform/3_database/: main.tf  outputs.tf
terraform/3_ingestion/: main.tf  terraform.tfvars.example
terraform/4_worker/: main.tf  variables.tf
terraform/5_control_plane/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/6_frontend/: main.tf
terraform/6_worker/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/7_control_plane/: main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/8_frontend/: outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/ingest/: test_chunker.py
tests/safety/: test_approval.py  test_denylist.py  test_secret_redact.py
